# lcda-test

./: .gitattributes  .gitignore  README.md
python/: .env.example  README.md  env_utils.py  models.py  pyproject.toml
python/m1/: .mcp.json  chinook.db  customers_seed.sql  m1.4_scratch_agent_butler.py  m1.5_scratch_agent_tools.py  m1.6_agent_mcp.py  m1.7_messages_threads_checkpointers.py  m1.8_hitl.py  m1.8_hitl_respond.py
python/m1/gh_auth/: github_agent.py  step1.py  step2.py  step3.py
python/m2/: m2.2_agent.py  m2.3_sales_agent.py  m2.3_sandbox_agent.py  m2.4_eval_agent.py  m2.4_interpreter_agent.py
python/m3/: m3.1_summarization.py  m3.2_scratch_agent_skills.py  m3.3_memory_agent.py
python/m3/memories/: AGENTS.md
python/m3/skills/draft-pitch/: SKILL.md
python/m3/skills/qualify-lead/: SKILL.md
python/m4/: m4.2_run_newsletter.py  m4_2_newsletter_agent.py
python/m5/hello/: agent.py  langgraph.json
python/m5/sales_assistant/: AGENTS.md  agent.py  langgraph.json  langgraph_sandbox.json  start.sh  subagents.py  test_diagnostic.py  test_lesson_prompts.py
python/m5/sales_assistant/agents/chinook-analyst/: AGENTS.md
python/m5/sales_assistant/data/: chinook.db
python/m5/sales_assistant/mcp/: mail_store.py  mock_mail_server.py  send_to_inbox.py
python/m5/sales_assistant/mcp/seeds/: incoming_rfq.json
python/m5/sales_assistant/skills/rfq-quote/: SKILL.md
python/m5/sales_assistant/skills/territory-report/: SKILL.md
python/m5/sales_assistant/tools/: __init__.py  chart.py  html.py  search.py  sql.py
(+1 files in other folders)
