[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["models", "env_utils"]

[project]
name = "lca-deepagents-python"
version = "0.1.0"
requires-python = ">=3.11,<3.15"

dependencies = [
    "deepagents>=0.5.9",
    "langgraph>=1.0.0,<2.0",
    "langchain>=1.0.0,<2.0",
    "langchain-core>=1.3.3,<2.0",
    "langchain-anthropic",
    "langchain-openai",
    "langgraph-cli[inmem]>=0.4.0",
    "python-dotenv",
    "langsmith[sandbox]",
    "langchain-ollama>=1.1.0",
    "langchain-community>=0.4.2",
    "deepagents-code",
    "langchain-quickjs",
    "langchain-mcp-adapters",
    "tavily-python",
    "markdown",
    "nh3",
    "matplotlib>=3.11.0",
    "questionary>=2.0.0",
]

[tool.ruff]
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["T201", "E501", "UP006", "UP007", "E402"]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
